# SimpleYTDownloader

./: LICENSE  README.md  basegui.py  demo.py  demo1.py  demowebview.py  download_functions.py  folder_chooser.py  main.py  pyproject.toml  requirements.txt
simpleytdownloader/: download_functions.py  folder_chooser.py  main.py
